# self-expanding-neural-networks

./: .gitignore  LICENSE  README.md
senn_cnn/: Dockerfile  README.md  bashrc_docker  docker-compose.yaml  pyproject.toml
senn_cnn/experiments/: config.py  models.py  resnet_models.py  senn_cifar10_manycycle.py  senn_cifar10_onecycle.py  transfer_cifar10_pretrain.py  transfer_tinyimagenet_fixed.py  transfer_tinyimagenet_senn.py
senn_cnn/senn/: dummy.py  linalg.py  models.py  neural.py  opt.py  taylor.py
senn_cnn/tests/: test_linalg.py  test_models.py  test_neural.py
senn_mlp/: Dockerfile  README.md  build.sh  config.yaml  data.py  experiment1.py  experiment2.py  experiment3.py  experiment4.py  experiment_utils.py  jaxutils.py  langevin.py  nets.py  nets_legacy.py  optim.py  requirements.txt  tboard.sh  use  visualisation.py
senn_mlp/experiment1/: default_config.yaml
senn_mlp/experiment2/: default_config.yaml
senn_mlp/experiment3/: default_config.yaml
senn_mlp/experiment4/: default_config.yaml
